--- a/Iris_flower_classification(oasis).ipynb
+++ b/Iris_flower_classification(oasis).ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/NithinR241328/OASIS-INTERNSHIP/blob/main/Iris_flower_classification(oasis).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/NithinR241328/oibsip_taskno.1/blob/main/Iris_flower_classification(oasis).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
